<resources>
    <string name="app_name" translatable="false">NNS 24</string>
    <string name="password">Password</string>
    <string name="hello_blank_fragment" translatable="false">Password</string>
    <string name="username">Username</string>
    <string name="remember_me">Remember me</string>
    <string name="login">Login</string>
    <string name="watchlist">Watchlist</string>
    <string name="trades">Trades</string>
    <string name="submitted">Submitted</string>
    <string name="change_lang">Change Language</string>
    <string name="account">Account</string>
    <string name="nothing_here">Nothing here</string>
    <string name="user123">user123</string>
    <string name="userabc">userAbc</string>
    <string name="zero">0</string>
    <string name="all_complaints">All Complaints</string>
    <string name="all_submitted_complaints">All Submitted Complaints</string>
    <string name="more_info">More Info</string>
    <string name="all_completed_complaints">All Resolved Complaints</string>
    <string name="all_pending_complaints">All Pending Complaints</string>
    <string name="all_yesterday_complaints">All Yesterday\'s Complaints</string>
    <string name="yesterday_s_pending_complaints">Yesterday\'s Pending Complaints</string>
    <string name="yesterday_completed_complaints">Yesterday\'s Completed Complaints</string>
    <string name="all_complaint_chart">All Complaint Chart</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="id">Id</string>
    <string name="name">Name : %s</string>
    <string name="complaints">Complaints</string>
    <string name="mobile">Mobile : %s</string>
    <string name="complaint_id">Complaint ID : %s</string>
    <string name="complaint" >Complaint : %s </string>
    <string name="status">Status : %s</string>
    <string name="date">Date %s</string>
    <string name="address">Address : %s</string>
    <string name="parshad">Parshad : %s</string>
    <string name="is_p_r">Is P.R %s</string>
    <string name="created_date_amp_time"><![CDATA[Created Date & Time]]></string>
    <string name="updated_date_amp_time"><![CDATA[Updated Date & Time]]></string>
    <string name="done">Done</string>
    <string name="returnTxt">Return</string>
    <string name="dashboard">Dashboard</string>
    <string name="in_process">In Process</string>
    <string name="resolved">Resolved</string>
    <string name="pending_complaints">Pending Complaints</string>
    <string name="return_complaints">Return Complaints</string>
    <string name="submitted_complaints">Submitted Complaints</string>
    <string name="profile">Profile</string>
    <string name="logout">Logout</string>
    <string name="default_notification_channel_id" translatable="false">fcm_default_channel</string>
    <string name="copyrights_are_reserved">Developed by ChalOnline</string>
    <string name="ward_no">Ward No. : %s</string>
    <string name="username_caps">USERNAME</string>
    <string name="hello_again_n_welcome_back">Hello again,\n Welcome back.</string>
    <string name="password_caps">PASSWORD</string>
    <string name="department">Department : %s</string>
    <string name="reason">Reason : %s</string>
    <string name="complaint_completed">Complaint Completed</string>
    <string name="submit">Submit</string>
    <string name="return_complaint">Return Complaint</string>
    <string name="please_enter_reason_for_the_return">Please enter reason for the return?</string>
    <string name="write_your_reason">write your reason</string>
    <string name="complaint_details">Complaint Details</string>
    <string name="share_on_whatsapp">Share on Whatsapp</string>
    <string name="share_selected_on_whatsapp">Share selected on WhatsApp</string>
    <string name="nothing_found_here">Nothing found here!</string>
    <string name="completed_complaints">Completed Complaints</string>
    <string name="resolved_complaints">Resolved Complaints</string>
    <string name="all_return_complaints">All Return Complaints</string>
    <string name="image_optional">Image (optional)</string>
</resources>