<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/appCompatTextView5"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="#5EFF9E80"
        android:fontFamily="@font/poppins_medium"
        android:gravity="center"
        android:padding="16dp"
        android:text="@string/return_complaint"
        android:textSize="@dimen/_16sdp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.appcompat.widget.AppCompatImageView
        android:layout_width="@dimen/_30sdp"
        android:layout_height="@dimen/_30sdp"
        android:layout_marginHorizontal="@dimen/_5sdp"
        android:padding="5dp"
        android:src="@drawable/ic_close"
        app:layout_constraintBottom_toBottomOf="@+id/appCompatTextView5"
        app:layout_constraintEnd_toEndOf="@+id/appCompatTextView5"
        app:layout_constraintTop_toTopOf="@+id/appCompatTextView5" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/reasonTxt"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="@dimen/_10sdp"
        android:layout_marginVertical="@dimen/_10sdp"
        android:fontFamily="@font/poppins_semi_bold"
        android:text="@string/please_enter_reason_for_the_return"
        android:textSize="@dimen/_16sdp"
        app:layout_constraintTop_toBottomOf="@+id/appCompatTextView5" />

    <androidx.cardview.widget.CardView
        android:id="@+id/cardView2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:cardCornerRadius="15dp"
        app:cardElevation="5dp"
        app:cardUseCompatPadding="true"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/reasonTxt">

        <androidx.appcompat.widget.AppCompatEditText
            android:id="@+id/returnTxt"
            android:layout_width="match_parent"
            android:layout_height="@dimen/_150sdp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="8dp"
            android:layout_marginBottom="16dp"
            android:padding="@dimen/_10sdp"
            android:gravity="top"
            android:hint="@string/write_your_reason"
            android:inputType="textImeMultiLine"
            android:src="@drawable/ic_baseline_add_photo_alternate_24" />
    </androidx.cardview.widget.CardView>

    <androidx.appcompat.widget.AppCompatButton
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="@dimen/_20sdp"
        android:background="@drawable/btn_bg"
        android:backgroundTint="#E18C65"
        android:text="@string/submit"
        android:textAllCaps="false"
        android:textAppearance="@style/TextAppearance.AppCompat.Medium"
        android:textColor="@color/white"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/cardView2" />

</androidx.constraintlayout.widget.ConstraintLayout>