<?xml version="1.0" encoding="utf-8"?>
<com.google.android.material.navigation.NavigationView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/nav_view"
    android:layout_width="@dimen/_230sdp"
    android:layout_height="match_parent"
    android:layout_gravity="start"
    android:background="@color/white"
    android:gravity="end">

    <androidx.core.widget.NestedScrollView
        android:layout_width="@dimen/_230sdp"
        android:layout_height="match_parent"
        android:fillViewport="true">

        <androidx.appcompat.widget.LinearLayoutCompat
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <androidx.appcompat.widget.LinearLayoutCompat
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="#5EFF9E80"
                android:orientation="vertical">

                <de.hdodenhof.circleimageview.CircleImageView
                    android:id="@+id/userImage"
                    android:layout_width="@dimen/_60sdp"
                    android:layout_height="@dimen/_60sdp"
                    android:layout_gravity="center"
                    android:layout_marginHorizontal="15dp"
                    android:layout_marginTop="@dimen/_35sdp"
                    android:layout_marginBottom="15dp"
                    app:civ_border_color="#979797"
                    app:civ_border_width="1dp" />

                <androidx.appcompat.widget.AppCompatTextView
                    android:id="@+id/usernameTxt"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginHorizontal="@dimen/_10sdp"
                    android:paddingHorizontal="@dimen/_15sdp"
                    android:textAlignment="center"
                    android:textColor="@color/black"
                    android:textSize="@dimen/_12sdp" />

                <androidx.appcompat.widget.AppCompatTextView
                    android:id="@+id/numberTxt"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginHorizontal="@dimen/_10sdp"
                    android:layout_marginVertical="@dimen/_5sdp"
                    android:layout_marginBottom="@dimen/_10sdp"
                    android:paddingHorizontal="@dimen/_15sdp"
                    android:textAlignment="center"
                    android:textColor="@color/black"
                    android:textSize="@dimen/_12sdp" />

            </androidx.appcompat.widget.LinearLayoutCompat>

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="#CFCECE" />

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/dashboardBtn"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:drawableStart="@drawable/ic_dashboard_24"
                android:drawablePadding="10dp"
                android:paddingHorizontal="@dimen/_25sdp"
                android:paddingVertical="@dimen/_15sdp"
                android:text="@string/dashboard"
                android:textColor="@color/black"
                android:textSize="@dimen/_12sdp" />

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="#CFCECE" />

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/allComplaintsBtn"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:drawableStart="@drawable/book_ic"
                android:drawablePadding="10dp"
                android:gravity="center_vertical"
                android:paddingHorizontal="@dimen/_25sdp"
                android:paddingVertical="@dimen/_15sdp"
                android:text="@string/all_complaints"
                android:textColor="@color/black"
                android:textSize="@dimen/_12sdp" />

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="#CFCECE" />

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/pendingBtn"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:drawableStart="@drawable/ic_event_note"
                android:drawablePadding="10dp"
                android:paddingHorizontal="@dimen/_25sdp"
                android:paddingVertical="@dimen/_15sdp"
                android:text="@string/pending_complaints"
                android:textColor="@color/black"
                android:textSize="@dimen/_12sdp" />

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="#CFCECE" />

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/returnBtn"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:drawableStart="@drawable/ic_compare_arrows"
                android:drawablePadding="10dp"
                android:paddingHorizontal="@dimen/_25sdp"
                android:paddingVertical="@dimen/_15sdp"
                android:text="@string/return_complaints"
                android:textColor="@color/black"
                android:textSize="@dimen/_12sdp" />

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="#CFCECE" />

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/submittedBtn"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:drawableStart="@drawable/ic_assignment_returned"
                android:drawablePadding="10dp"
                android:paddingHorizontal="@dimen/_25sdp"
                android:paddingVertical="@dimen/_15sdp"
                android:text="@string/submitted_complaints"
                android:textColor="@color/black"
                android:textSize="@dimen/_12sdp" />

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="#CFCECE" />

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/resolvedComplaintsBtn"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:drawableStart="@drawable/completed_ic"
                android:drawablePadding="10dp"
                android:paddingHorizontal="@dimen/_25sdp"
                android:paddingVertical="@dimen/_15sdp"
                android:text="@string/resolved_complaints"
                android:textColor="@color/black"
                android:textSize="@dimen/_12sdp"
                android:visibility="visible" />

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="#CFCECE"
                android:visibility="visible" />

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/logoutBtn"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:drawableStart="@drawable/ic_exit_to_app"
                android:drawablePadding="10dp"
                android:paddingHorizontal="@dimen/_25sdp"
                android:paddingVertical="@dimen/_15sdp"
                android:text="@string/logout"
                android:textColor="@color/black"
                android:textSize="@dimen/_12sdp" />

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="#CFCECE" />
        </androidx.appcompat.widget.LinearLayoutCompat>

    </androidx.core.widget.NestedScrollView>

</com.google.android.material.navigation.NavigationView>