<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    tools:context=".ui.fragments.login.LoginFragment">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="#fff"
        tools:context=".Activities.LoginActivity">

        <View
            android:layout_width="350dp"
            android:layout_height="350dp"
            android:layout_alignParentEnd="true"
            android:layout_marginTop="-220dp"
            android:layout_marginEnd="-100dp"
            android:background="@drawable/blue_circle" />

        <View
            android:layout_width="220dp"
            android:layout_height="200dp"
            android:layout_marginStart="-40dp"
            android:layout_marginTop="-130dp"
            android:background="@drawable/orange_circle" />


        <androidx.appcompat.widget.AppCompatTextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="@dimen/_100sdp"
            android:gravity="center"
            android:text="@string/hello_again_n_welcome_back"
            android:textAppearance="@style/TextAppearance.AppCompat.Medium"
            android:textColor="@color/black"
            android:textSize="@dimen/_20sdp" />

        <!--    <androidx.cardview.widget.CardView-->
        <!--        android:id="@+id/cardView"-->
        <!--        android:layout_width="match_parent"-->
        <!--        android:layout_height="wrap_content"-->
        <!--        android:layout_above="@+id/bottom"-->
        <!--        android:layout_margin="15dp"-->
        <!--        android:visibility="visible">-->

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_marginHorizontal="15dp"
            android:layout_marginBottom="@dimen/_120sdp"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:orientation="vertical">

                <androidx.appcompat.widget.AppCompatTextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="@color/black"
                    android:fontFamily="@font/poppins_regular"
                    android:paddingHorizontal="10dp"
                    android:paddingTop="10dp"
                    android:text="@string/username_caps"
                    android:textStyle="bold" />

                <androidx.appcompat.widget.AppCompatEditText
                    android:id="@+id/usernameET"
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:textColor="@color/black"
                    android:textColorHint="#fafafa"
                    android:backgroundTint="#D8D8D8"
                    android:fontFamily="@font/poppins_regular"
                    android:inputType="textEmailAddress"
                    android:paddingStart="10dp"
                    android:paddingBottom="15dp"
                    tools:ignore="RtlSymmetry,SpeakableTextPresentCheck" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:orientation="vertical"
                android:padding="1dp">

                <androidx.appcompat.widget.AppCompatTextView
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:fontFamily="@font/poppins_regular"
                    android:paddingHorizontal="10dp"
                    android:text="@string/password_caps"
                    android:textColor="@color/black"

                    android:textStyle="bold" />

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <androidx.appcompat.widget.AppCompatEditText
                        android:id="@+id/passwordET"
                        android:layout_width="match_parent"
                        android:layout_height="50dp"
                        android:backgroundTint="#D8D8D8"
                        android:fontFamily="@font/poppins_regular"
                        android:inputType="textPassword"
                        android:paddingStart="10dp"
                        android:textColor="@color/black"
                        android:paddingEnd="130dp"
                        tools:ignore="SpeakableTextPresentCheck" />

                </RelativeLayout>
            </LinearLayout>


            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/loginBtn"
                android:layout_width="match_parent"
                android:layout_height="55dp"
                android:layout_margin="20dp"
                android:background="@drawable/dialog_button_blue"
                android:fontFamily="@font/poppins_regular"
                android:letterSpacing=".03"
                android:text="@string/login"
                android:textAppearance="@style/TextAppearance.AppCompat.Medium"
                android:textColor="#fff"
                android:textStyle="bold" />
        </LinearLayout>



        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true">

            <View
                android:layout_width="250dp"
                android:layout_height="200dp"
                android:layout_alignParentEnd="true"
                android:layout_marginTop="30dp"
                android:layout_marginBottom="-160dp"
                android:background="@drawable/bottom_circle" />

            <View
                android:layout_width="280dp"
                android:layout_height="200dp"
                android:layout_alignParentEnd="true"
                android:layout_marginEnd="-150dp"
                android:layout_marginBottom="-150dp"
                android:background="@drawable/bottom_circle_2" />
        </RelativeLayout>

    </RelativeLayout>
</androidx.constraintlayout.widget.ConstraintLayout>